# lumilingo

./: .gitignore  .personal_log.txt  CHANGELOG.md  LICENSE  README.md
lumi-lingo/backend/: .env.example  main.py  pyproject.toml  requirements.txt
lumi-lingo/frontend/: .env.development.example  .env.production.example  index.html  package-lock.json  package.json  vite.config.js
lumi-lingo/frontend/src/: App.jsx  index.css
