[project]
name = "lumi-lingo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools==5.3.3",
    "email-validator==2.1.1",
    "fastapi==0.109.0",
    "pydantic==2.5.3",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.25",
    "uvicorn==0.27.0",
]

[tool.ruff]
# Standard configuration for ruff linter
target-version = "py312"
line-length = 88
src = ["."]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), and additional standard rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D106",   # Missing docstring in public nested class
    "D107",   # Missing docstring in __init__
    "B008",   # False positive for FastAPI Depends() pattern
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in specific files
"__init__.py" = ["F401"]
"tests/*" = ["D", "ARG"]

[tool.ruff.format]
# Format configuration to match black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
